fix spacing

--- a/src/components/expertise/Expertise.css
+++ b/src/components/expertise/Expertise.css
@@ -61,11 +61,23 @@
     padding:0;
   }
   @media (min-width: 1100px){
+    align-self: center;
+    width:684px;
     justify-content: space-between;
     padding:0;
     margin-top:2rem;
     li{
-      margin:auto;
+      margin:0;
+    }
+    li:nth-child(odd){
+      margin-left:0;
+    }
+    li:nth-child(even){
+      margin-right:0;
+    }
+    li:nth-child(5){
+      margin-right:0;
+      margin-left:0;
     }
   }
   @media (min-width: 1000px) and (min-height:400px){
@@ -82,8 +94,6 @@
   margin-bottom:3rem;
   p{ 
     width: 160px;
- 
-  
   }
   @media (min-width: 750px){
     margin-bottom:2rem;
@@ -91,7 +101,7 @@
     flex-wrap:wrap;
   }
   @media(min-width:1100px){
-    width:11rem;
+    width:110px;
   }
 }
 .iconUl{
